package com;

/**
 * Classe Mur, represente un Mur dans le labyrinthe
 */

public class Mur extends Case {

    /**
     * CONSTRUCTEURS
     */

    /** Constructeur vide de Mur */
    Mur() {
        super(false, Textures.tex_mur);
    }
}